feat(angular-react): use angular-react library

--- a/angular-react-simple/src/app/app.component.html
+++ b/angular-react-simple/src/app/app.component.html
@@ -9,5 +9,7 @@
     <input [(ngModel)]="title" (ngModelChange)="onChange($event)">
   </div>
   <div id="react-button"></div>
+  <hr>
+  <app-button [title]="title" (buttonClick)="updateCount()" ></app-button>
 </div>
 
