complete component template, add context builder and use auto generated modules in code

--- a/src/app/templates/ng-component.hbs
+++ b/src/app/templates/ng-component.hbs
@@ -1,4 +1,3 @@
-
 import { ReactWrapperComponent } from '@angular-react/core';
 import {
   ChangeDetectionStrategy,
@@ -11,44 +10,51 @@ import {
   Renderer2,
   ViewChild,
 } from '@angular/core';
-import { ButtonProps } from '../react-components/button';
+import { {{displayName}}Props } from '../{{importPath}}';
 
 @Component({
-  selector: 'app-button',
-  exportAs: 'appButton',
+  selector: 'app-{{name}}',
+  exportAs: 'app{{displayName}}',
   template: `
-    <Button
+    <{{displayName}}
       #reactNode
-      [title]="title"
-      [type]="type"
-      (onClick)="onClickHandler($event)"
+      {{#each inputProps}}
+      [{{this.name}}]="{{this.name}}""
+      {{/each}}
+      {{#each outputProps}}
+      ({{this.name}})="{{this.name}}Handler($event)"
+      {{/each}}
       >
       <ReactContent><ng-content></ng-content></ReactContent>
-    </Button>
+    </{{displayName}}>
   `,
   styles: ['react-renderer'],
   changeDetection: ChangeDetectionStrategy.OnPush,
 })
-export class ButtonComponent extends ReactWrapperComponent<ButtonComponent> {
-  @ViewChild('reactNode')
-  protected reactNodeRef: ElementRef;
+export class {{displayName}}Component extends ReactWrapperComponent<{{displayName}}Props> {
+  @ViewChild('reactNode') protected reactNodeRef: ElementRef;
 
-  @Input()
-  title: ButtonProps['title'];
-  @Input()
-  type?: ButtonProps['type'];
+  {{#each inputProps}}
+  @Input() {{this.name}}: {{../displayName}}Props['{{this.name}}'];
+  {{/each}}
 
+  {{#each outputProps}}
   // tslint:disable-next-line:no-output-on-prefix
-  @Output() readonly onClick = new EventEmitter<MouseEvent>();
+  @Output() readonly {{this.name}} = new EventEmitter();
+  {{/each}}
 
   constructor(elementRef: ElementRef, changeDetectorRef: ChangeDetectorRef, renderer: Renderer2) {
     super(elementRef, changeDetectorRef, renderer);
 
     // coming from React context - we need to bind to this so we can access the Angular Component properties
-    this.onClickHandler = this.onClickHandler.bind(this);
+    {{#each outputProps}}
+    this.{{this.name}}Handler = this.{{this.name}}Handler.bind(this);
+    {{/each}}
   }
 
-  onClickHandler(ev?: React.MouseEvent) {
-    this.onClick.emit(ev.nativeEvent);
+  {{#each outputProps}}
+  {{this.name}}Handler(ev?) {
+    this.{{this.name}}.emit(ev.nativeEvent);
   }
+  {{/each}}
 }
