refactoring and handle recursive directory creation while writing files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,6 @@
   </div>
   <hr>
   <app-button [type]="type" (onClick)="updateCount()" >{{ title }}</app-button>
+  <app-button2 [type]="type" (onClick)="updateCount()" >{{ title }}</app-button2>
 </div>
 
