--- a/src/app/templates/ng-module.hbs
+++ b/src/app/templates/ng-module.hbs
@@ -1,7 +1,7 @@
 import { registerElement } from '@angular-react/core';
 import { CommonModule } from '@angular/common';
 import { NgModule, NO_ERRORS_SCHEMA } from '@angular/core';
-import { {{displayName}} } from '../{{importPath}}';
+import { {{displayName}} } from '../../{{importPath}}';
 import { {{displayName}}Component } from './{{name}}.component';
 
 const components = [{{displayName}}Component];
